app/assets/stylesheets/custom.scss
/* ... */
.default-background-color {
    background: var(--background-color);
}

.mission-list-input-tooltip {
    filter: drop-shadow(0 1px 5px rgba(0, 0, 0, .5));
    box-sizing: border-box;
    position: absolute;
    font-size: 13px;
    font-weight: 350;
    color: #222;
    background: var(--tooltip-color);
    width: 100%;
    width: max-content;
    height: auto;
    height: 20px;
    padding-top: 2px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 3px 0 0 3px;
    text-align: center;
}

.mission-list-input-tooltip:before {
    content: "";
    position: absolute;
    bottom: 0;
    right: -10px;
    width: 0;
    height: 0;
    border-top: 10px solid transparent;
    border-bottom: 10px solid transparent;
    border-left: 10px solid var(--tooltip-color);
}

.mission-list-scrollarea {
    overflow-y: auto;
    height: 600px;
}

